Deleted CSS shadow - buggy on mobile

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -181,8 +181,8 @@ a:link {
 .book-spine{
   position: relative;
   height: 300px;
-  -webkit-filter: drop-shadow(5px 5px 5px #222222);
-  filter: drop-shadow(5px 5px 5px #222222);
+  // -webkit-filter: drop-shadow(5px 5px 5px #222222);
+  // filter: drop-shadow(5px 5px 5px #222222);
 }
 
 .rating-wrap{
